5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4379/executions/1753_3087.log
== TEST (2019-05-16 18:24:48) 
-- CODE:
i=int(input("digite o numero"))
t=iny(input("digite o termo"))
soma=0
i=0
b=0
while(i!=0):
	i=i+1
	b=b+1
	soma=soma+i*t
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    t=iny(input())
NameError: name 'iny' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:25:05) 
-- CODE:
i=int(input("digite o numero"))
t=int(input("digite o termo"))
soma=0
i=0
b=0
while(i!=0):
	i=i+1
	b=b+1
	soma=soma+i*t
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    t=iny(input())
NameError: name 'iny' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:25:32) 
-- CODE:
i=int(input("digite o numero"))
t=int(input("digite o termo"))
soma=0
i=0
b=0
while(i!=0):
	i=i+1
	b=b+1
	soma=soma+i
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    t=iny(input())
NameError: name 'iny' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:27:22) 
-- CODE:
i=int(input("digite o numero"))
t=int(input("digite o termo"))
soma=0
i=0
b=0
while(i!=0):
	i=i+1
	b=b+1
	soma=soma+i+t
print(round(soma,2)
-- ERROR:
File "XXXX", line 11
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:27:23) 
-- CODE:
i=int(input("digite o numero"))
t=int(input("digite o termo"))
soma=0
i=0
b=0
while(i!=0):
	i=i+1
	b=b+1
	soma=soma+i+t
print(round(soma,2)
-- ERROR:
File "XXXX", line 11
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:27:25) 
-- CODE:
i=int(input("digite o numero"))
t=int(input("digite o termo"))
soma=0
i=0
b=0
while(i!=0):
	i=i+1
	b=b+1
	soma=soma+i+t
print(round(soma,2)
-- ERROR:
File "XXXX", line 11
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:27:31) 
-- CODE:
i=int(input("digite o numero"))
t=int(input("digite o termo"))
soma=0
i=0
b=0
while(i!=0):
	i=i+1
	b=b+1
	soma=soma+i
print(round(soma,2)
-- ERROR:
File "XXXX", line 11
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:27:31) 
-- CODE:
i=int(input("digite o numero"))
t=int(input("digite o termo"))
soma=0
i=0
b=0
while(i!=0):
	i=i+1
	b=b+1
	soma=soma+i
print(round(soma,2)
-- ERROR:
File "XXXX", line 11
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:38:15) 
-- CODE:
i=int(input("digite o numero"))
soma=0
i=0
b=0
while(i!=0):
	i=i+1
	b=b+1
	soma=soma+i
print(round(soma,2)
-- ERROR:
File "XXXX", line 10
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:38:55) 
-- CODE:
i=int(input("digite o numero"))
soma=0
i=0
b=0
while(i!=0):
	i=i+1
	b=b+1
	soma=soma+i
print(round(soma,2)
-- ERROR:
File "XXXX", line 10
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:39:19) 
-- CODE:
in=int(input("digite o numero"))
soma=0
i=0
b=0
while(in!=0):
	i=i+1
	b=b+1
	soma=soma+i
print(round(soma,2)
-- ERROR:
File "XXXX", line 1
    in=int(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:39:46) 
-- CODE:
num=int(input("digite o numero"))
soma=0
i=0
b=0
while(num!=0):
	i=i+1
	b=b+1
	soma=soma+i
print(round(soma,2)
-- ERROR:
File "XXXX", line 10
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:39:47) 
-- CODE:
num=int(input("digite o numero"))
soma=0
i=0
b=0
while(num!=0):
	i=i+1
	b=b+1
	soma=soma+i
print(round(soma,2)
-- ERROR:
File "XXXX", line 10
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:39:49) 
-- CODE:
num=int(input("digite o numero"))
soma=0
i=0
b=0
while(num!=0):
	i=i+1
	b=b+1
	soma=soma+i
print(round(soma,2)
-- ERROR:
File "XXXX", line 10
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:39:50) 
-- CODE:
num=int(input("digite o numero"))
soma=0
i=0
b=0
while(num!=0):
	i=i+1
	b=b+1
	soma=soma+i
print(round(soma,2)
-- ERROR:
File "XXXX", line 10
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:40:13) 
-- CODE:
num=int(input("digite o numero"))
soma=0
i=0
b=0
while(num!=0):
	i=i+1
	b=b+1
	soma=soma+num
print(round(soma,2)
-- ERROR:
File "XXXX", line 10
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:40:29) 
-- CODE:
num=int(input("digite o numero"))
soma=0
i=0
b=0
while(num!=0):
	i=i+1
	b=b+1
	soma=soma+num*
print(round(soma,2)
-- ERROR:
File "XXXX", line 8
    soma=soma+num*
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:40:30) 
-- CODE:
num=int(input("digite o numero"))
soma=0
i=0
b=0
while(num!=0):
	i=i+1
	b=b+1
	soma=soma+num*
print(round(soma,2)
-- ERROR:
File "XXXX", line 8
    soma=soma+num*
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:41:29) 
-- CODE:
num=int(input("digite o numero"))
soma=0
i=0
b=0
while(num!=0):
	i=i+1
	b=b+1
	soma=soma+num*
print(round(soma,2)
-- ERROR:
File "XXXX", line 8
    soma=soma+num*
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:41:29) 
-- CODE:
num=int(input("digite o numero"))
soma=0
i=0
b=0
while(num!=0):
	i=i+1
	b=b+1
	soma=soma+num*
print(round(soma,2)
-- ERROR:
File "XXXX", line 8
    soma=soma+num*
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:53:20) 
-- CODE:
num=int(input("digite o numero"))
soma=0
i=0
b=0
while(num!=0):
	i=i+1
	b=b+1
	if num%2==0:
		par=par+1
	
	else:
		impar=impar+1
soma=par/i
soma=impar/i
media=par/i
print(round(soma,2)
-- ERROR:
File "XXXX", line 17
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:53:38) 
-- CODE:
num=int(input("digite o numero"))
soma=0
i=0
b=0
while(num!=0):
	i=i+1
	b=b+1
	if num%2==0:
		par=par+num
	
	else:
		impar=impar+num
soma=par/i
soma=impar/i
media=par/i
print(round(soma,2)
-- ERROR:
File "XXXX", line 17
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:54:15) 
-- CODE:
num=int(input("digite o numero"))
soma=0
i=0
b=0
while(num!=0):
	i=i+1
	b=b+1
	if num%2==0:
		par=par+num
	
	else:
		impar=impar+num
soma1=par/i
soma2=impar/i
media=par/i
print(round(soma,2)
-- ERROR:
File "XXXX", line 17
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:54:47) 
-- CODE:
num=int(input("digite o numero"))
soma=0
i=0
b=0
while(num!=0):
	i=i+1
	b=b+1
	if num%2==0:
		par=par+num
	
	else:
		impar=impar+num
soma1=par/i
soma2=impar/i
media=par/i
print(round(soma1,2)
print(round(soma2,2))
-- ERROR:
File "XXXX", line 17
    print(round(soma2,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:54:52) 
-- CODE:
num=int(input("digite o numero"))
soma=0
i=0
b=0
while(num!=0):
	i=i+1
	b=b+1
	if num%2==0:
		par=par+num
	
	else:
		impar=impar+num
soma1=par/i
soma2=impar/i
media=par/i
print(round(soma1,2)
print(round(soma2,2)
-- ERROR:
File "XXXX", line 17
    print(round(soma2,2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
